# Search_Engine

./: Answers.md  AvlTreeMap.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.cpp  SearchEngine.h  UserInterface.cpp  UserInterface.h  main.cpp  test_AvlTreeMap.cpp  test_Persistence.cpp
Testing/: TAG
sample_data/coll_2/: news_0064570.json
